@@ -70,6 +70,7 @@
 #include "wzd_log.h"
 #include "wzd_misc.h"
 #include "wzd_libmain.h"
+#include "wzd_messages.h"
 #include "wzd_mod.h" /* essential to define WZD_MODULE_INIT */
 
 /***** Private vars ****/
