@@ -60,10 +60,6 @@
 #include <pthread.h>
 #endif
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 
 #include "wzd_log.h"
