@@ -69,10 +69,6 @@
 #define INET6_ADDRSTRLEN 46
 #endif
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 
 #include "wzd_misc.h"
