@@ -47,10 +47,6 @@
 #include "wzd_cache.h"
 
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 #include "wzd_log.h"
 #include "wzd_misc.h"
