@@ -62,10 +62,6 @@
 #include <fcntl.h>
 #include <ctype.h>
 
-/* speed up compilation */
-#define SSL void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 #include "wzd_log.h"
 #include "wzd_misc.h"
