@@ -28,10 +28,6 @@
 #include <sys/types.h>
 #include <string.h>
 
-/* speed up compilation */
-#define	SSL	void
-#define	SSL_CTX	void
-
 #include "wzd_structs.h"
 #include "wzd_log.h"
 #include "wzd_crontab.h"
