@@ -37,10 +37,6 @@
 #include <fcntl.h>
 #include <sys/stat.h>
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 #include "wzd_log.h"
 
