@@ -101,10 +101,6 @@ typedef struct
 
 #include <fcntl.h> /* O_RDONLY */
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 
 #include "wzd_log.h"
