@@ -48,10 +48,6 @@
 #include <pwd.h>	/* getpwnam() */
 #endif
 
-/* speed up compilation */
-#define	SSL	void
-#define	SSL_CTX	void
-
 #include "wzd_structs.h"
 
 #include "wzd_log.h"
