@@ -50,8 +50,6 @@
 #include <fcntl.h> /* O_WRONLY */
 
 /* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
 #define	FILE	void
 
 #include "wzd_structs.h"
