@@ -62,10 +62,6 @@
 #include <errno.h>
 #include <fcntl.h>
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 
 #include "wzd_misc.h"
