@@ -21,11 +21,6 @@ void BrokenMD5Transform(uint32 buf[4], uint32 const in[16]);
 char *Goodcrypt_md5(const char *pw, const char *salt);
 char *Brokencrypt_md5(const char *pw, const char *salt);
 
-/*
-* This is needed to make RSAREF happy on some MS-DOS compilers.
-*/
-
-/*typedef struct MD5Context MD5_CTX;*/ /* conflicts with openssl declaration */
 
 /* FIXME VISUAL */
 #define MD5Name(x) (Good ## x)
