@@ -37,10 +37,6 @@
 #include <time.h>
 #include <fcntl.h> /* O_RDONLY */
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 #include "wzd_misc.h"
 #include "wzd_log.h"
