@@ -76,10 +76,6 @@
 #endif /* _MSC_VER */
 
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 
 #include "wzd_log.h"
