@@ -33,11 +33,6 @@
 
 #include <sys/stat.h>
 
-/* speed up compilation */
-#define SSL	void
-#define SSL_CTX	void
-#define FILE	void
-
 #include "wzd_structs.h"
 
 #include "wzd_ratio.h"
