@@ -41,11 +41,6 @@
 #include <arpa/inet.h>
 #endif
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-#define FILE    void
-
 #include "wzd_debug.h"
 #include "wzd_structs.h"
 
