@@ -43,10 +43,6 @@
 #include <semaphore.h>
 #endif
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 #include "wzd_log.h"
 #include "wzd_ServerThread.h"
