@@ -44,10 +44,6 @@
 #include <errno.h>
 #include <signal.h>
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 
 #include "wzd_log.h"
