@@ -41,10 +41,6 @@
 #include <fcntl.h>
 #include <errno.h>
 
-/* speed up compilation */
-#define SSL     void
-#define SSL_CTX void
-
 #include "wzd_structs.h"
 
 #include "wzd_log.h"
